# dbt-error-example

./: .gitignore  .mise.toml  README.md  docker-compose.yml  pyproject.toml  tmp-tables-error-demo.drop.sql  tmp-tables-error-demo.init.sql
.mise/tasks/db/: connect  execute
profiles/: .user.yml  profiles.yml
project/: dbt_project.yml
project/models/: schema.yml  sources.yml  target_table.sql
project/seeds/: source_table.csv
